tests/Fixtures/Torture/Bad/void_param.g
// EXPECT G007
kernel { entry func Main() { } func f(void x) { } }
